# terminal_task_manager

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TaskManagerTerminal  cmake_install.cmake
db/: tasks.db
include/: BusinessLogicLayer.h  DataSourceLayer.h  UserInterfaceLayer.h
src/: BusinessLogicLayer.cpp  BusinessLogicLayer.h  DataSourceLayer.cpp  DataSourceLayer.h  UserInterfaceLayer.cpp  UserInterfaceLayer.h  main.cpp
